fix: fix comment box overflow

--- a/beaconnect-react-app/src/pages/Main/pages/Home/components/home.css
+++ b/beaconnect-react-app/src/pages/Main/pages/Home/components/home.css
@@ -221,13 +221,13 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: calc(100% - 22px);
+  width: calc(100% - 62px);
   bottom: 0;
   background-color: rgba(233, 237, 201, 0.5);
   border: none;
   outline: none;
   border-radius: 50px;
-  padding-left: 20px;
+  padding: 0 40px 0 20px;
 }
 
 .bit-box-content-footer-comment-submit {
